styles.css
/* styles.css */

nav {
    background-color: #0000001a;
    padding-left: 20px;
    padding-top: 10px;
    padding-bottom: 10px;
    text-align:center;
}

header h1 {
    margin: 0;
    font-size: 24px;
    color:blue;
}

body {
    font-family: 'Poppins', sans-serif;
    margin: 0;
    padding: 0;
    /* Set text color to white for better visibility */
}

#wrapper {
    max-width: 600px;
    margin: 20px 100px;
    align-content: center;
    align-items: center;
}

form {
    background-color: rgba(255, 255, 255, 0.8);
    /* Glass appearance background */
    padding: 20px;
    border-radius: 8px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    margin-bottom: 20px;
    opacity: 0;
    /* Initially set opacity to 0 for fade-in effect */
    animation: fadeIn 1s ease-in-out forwards;
    /* Animation properties */
}

/* Keyframes for fade-in animation */
@keyframes fadeIn {
    from {
        opacity: 0;
        transform: translateY(-20px);
        /* Optional: Slide up effect */
    }

    to {
        opacity: 1;
        transform: translateY(0);
    }
}

label {
    /* display: block; */
    margin-bottom: 5px;
    color: #333;
}

select,
input,
button {
    padding: 10px;
    margin-top: 5px;
    border: 1px solid #ccc;
    border-radius: 5px;
    background-color: #fff;
    box-sizing: border-box;
}

button {
    margin-top: 10px;
    background-color: #4caf50;
    color: #fff;
    border: none;
    border-radius: 5px;
    cursor: pointer;
}

button:hover {
    background-color: #45a049;
}

table {
    width: 100%;
    border-collapse: collapse;
    margin-top: 20px;
}

#entryTable {
    /* width: 100%; */
    padding: auto;
    align-self: center;
    justify-self: center;
    margin-top: 20px;
    /* box-sizing: content-box; */
}

thead th,
tbody td {
    font-size: small;
    font-weight: normal;
    padding-right: 10px;
    padding-left: 10px;
    border: 1px solid #ddd;
    text-align: center;
    justify-content: center;
    /* width: max-content; */

}

.form-invalid .required:invalid {
    border: 2px solid red;
}

tbody tr:nth-child(even) {
    background-color: lightblue;
}

footer {
    background-color: #333;
    padding: 10px;
    text-align: center;

    bottom: 0;
    width: 100%;
    color: #fff;
}

#fleetForm .two-fields {

    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-column-gap: 20px;
    grid-row-gap: 10px;
    margin-bottom: 20px;

}

#fleetForm .three-fields {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-column-gap: 20px;
    grid-row-gap: 10px;
    margin-bottom: 20px;

}

#fleetForm label {
    justify-self: end;
    padding-right: 10px;
}

#fleetForm select,
#fleetForm input[type="text"],
#fleetForm input[type="number"] {
    width: 100%;
}

#entryTable {
    margin-top: 20px;
}

#drop-area {
    text-align: center;
    cursor: pointer;
    margin-bottom: 20px;
}

#img-view {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 20px;
    border: 2px dashed #bbb5ff;
    background: #f7f8ff;
}

#img-view img {
    width: 10%;
    margin-top: 25px;
}

#img-view span {
    font-size: small;
    /* display: flex; */
    color: #b3b3b3;
    margin-bottom: 10px;
}
.progress-bar-container {
    padding: 5px 0;
    background-color: #fff; /* or any color that matches your design */
    max-width: 600px; /* You can adjust this as needed */
    margin: auto; /* This centers the progress bar */
}

.progress-bar {
    counter-reset: step;
    list-style: none;
    padding: 0;
    display: flex;
    justify-content: space-evenly;
    margin: 0; /* Removes default margin */
}

    .progress-bar li {
        position: relative;
        flex-grow: 1;
        text-align: center;
        padding: 5px;
        font-size: 0.8em; /* Smaller font size */
        color:floralwhite;
        background-color:blue; /* Inactive step color */
    }

        .progress-bar li:before {
            counter-increment: step;
            content: counter(step);
            position: absolute;
            top: -20px; /* Adjusted for smaller circle size */
            left: 50%;
            transform: translateX(-50%);
            background-color: #333;
            color: #fff;
            width: 20px; /* Smaller circle size */
            height: 20px; /* Smaller circle size */
            text-align: center;
            line-height: 20px; /* Adjusted for smaller circle size */
            border-radius: 50%;
            font-size: 0.75em; /* Smaller text in circle */
        }

        .progress-bar li:after {
            content: '';
            position: absolute;
            top: 8px; /* Adjusted for alignment with the smaller circle */
            left: -50%; /* Starts from the middle of the circle */
            width: 100%;
            height: 2px; /* Thinner line to connect circles */
            background-color:#333; /* Connects steps */
            z-index: -1;
        }

        .progress-bar li:first-child:after {
            content: none;
        }

        .progress-bar li.current {
            background-color: #4caf50; /* Highlight for the current step */
        }

            .progress-bar li.current:before {
                background-color: #4caf50; /* Highlight for the current step number */
            }

        .progress-bar li.completed {
            background-color: #aaa; /* Color for completed steps */
        }

            .progress-bar li.completed:before {
                background-color: #aaa; /* Color for completed step numbers */
            }

            .progress-bar li.completed:after {
                background-color: #aaa; /* Color for completed line */
            }

